fix for flash messages

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -24,7 +24,7 @@
       .content
         .page-header
           %h1= @page_name
-        = render :partial => 'layouts/rails_admin/flash'
+        = render :partial => 'layouts/rails_admin/flash', :locals => { :flash => flash }
         = render :partial => 'layouts/rails_admin/breadcrumb'
         - if @abstract_model
           - if @object && !@object.new_record?
