--- a/app/views/layouts/rails_admin/_tabs.html.haml
+++ b/app/views/layouts/rails_admin/_tabs.html.haml
@@ -5,20 +5,20 @@
 - can_create = authorized? :new, @abstract_model
 - can_see_history = authorized? :see_history, @abstract_model
 
-%li{:class => (params[:action] == 'list' && 'active')}= link_to @model_config.label_plural + (@record_count ? " [#{@record_count}]" : ''), list_path(:model_name => params[:model_name]) if can_list
+%li{:class => (params[:action] == 'list' && 'active')}= link_to @model_config.label_plural, list_path(:model_name => params[:model_name]) if can_list
 %li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.list.add_new"), new_path(:model_name => params[:model_name]) if can_create
 %li{:class => (params[:action] == 'for_model' && 'active')}= link_to t("admin.history.name"), history_model_path(:model_name => params[:model_name]) if can_see_history
-%li{:class => (params[:action] == 'export' && 'active')}=# link_to t("admin.list.export_action"), export_path(params.except("page")) if can_export
+%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.list.export_action"), export_path(params[:model_name]) if can_export
 
 - if params[:action] == 'list' 
   - if (can_delete || can_export)
-    %li.dropdown{:'data-dropdown' => "dropdown"}
+    %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle Selected...
       %ul.dropdown-menu
         %li= link_to_function t("admin.list.export_selected"), "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;" if can_export
         %li= link_to_function t("admin.list.delete_selected"), "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;" if can_delete
   - if @filterable_fields.present?
-    %li.dropdown{:'data-dropdown' => "dropdown"}
+    %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle= t('admin.list.add_filter') + "..."
       %ul.dropdown-menu#filters
         - @filterable_fields.each do |field|
