--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -46,7 +46,4 @@
       = link_to(t("admin.list.show_all"), history_model_path(params.except("page").merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")))
 
 = form_tag("", :method => "get", :class => "search") do
-  .columns.wat-cf
-    .column.right
-      %input#search.search_box{:name => "query", :type => "text", :value => query, :placeholder => "#{t("admin.list.search")}"}
-      %input.search_submit{:type => "submit", :value => ""}
+  %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.list.search")}"}
