--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -4,7 +4,13 @@
 - sort = params[:sort]
 - sort_reverse = params[:sort_reverse]
 
-%table
+= form_tag("", :method => "get", :class => "search") do
+  .row.clearfix
+    .span3
+      %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.list.search")}"}
+    .span3
+      %button.btn.primary.search_submit{:type => "submit", :value => ""}Refresh
+%table#history.zebra-striped
   %thead
     %tr
       - columns = []
@@ -16,34 +22,22 @@
       - columns.each do |column|
         - property_name = column[:property_name]
         - selected = (sort == property_name)
-        - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
-
-        %th{:class => "#{column[:css_class]}#{" selected" if selected}"}
-          - sort_location = history_model_path(params.except("sort_reverse").merge(:model_name => @abstract_model.to_param, :sort => property_name).merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
-          = link_to(column[:link_text], sort_location, :class => sort_direction)
-
+        - sort_direction = selected ? (sort_reverse ? "headerSortUp" : "headerSortDown") : nil
+        - sort_location = history_model_path(params.except("sort_reverse").merge(:model_name => @abstract_model.to_param, :sort => property_name).merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
+        %th{:class => "header #{column[:css_class]} #{sort_direction if selected}", :'data-link' => sort_location}= column[:link_text]
   %tbody
     - @history.each_with_index do |object, index|
-      %tr{:class => index % 2 == 0 ? "odd" : "even"}
-        %td.dateTime
-          - unless object.created_at.nil?
-            = l(object.created_at, :format => :long, :default => l(object.created_at, :format => :long, :locale => :en))
-        %td.smallString
-          = object.username
+      %tr
+        - unless object.created_at.nil?
+          %td= l(object.created_at, :format => :long, :default => l(object.created_at, :format => :long, :locale => :en)) 
+        %td= object.username
         - if @general
-          %td.int
-            - if !object.message.match("Destroy") && object.item.present?
-              = link_to object.item, history_object_path(:id => object.item), :class => "historyLink"
-            - else
-              = object.item
-        %td.smallString
-          = object.message
-- if @general
+          %td= object.item
+        %td= object.message
+- if @general && @page_count.to_i > 1
   .pagination
-    - if @page_count.to_i > 1
-      = paginate(@current_page, @page_count, :url => params.except("page", "all"), :remote => false).html_safe
-    - if @page_count.to_i == 2
-      = link_to(t("admin.list.show_all"), history_model_path(params.except("page").merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")))
+    %ul
+      - if @record_count.to_i <= 100 && @page_count.to_i > 1
+        %li= link_to(t("admin.list.show_all"), history_model_path(params.merge(:all => true)), :class => "showall", :method => :get)
+      = paginate(@current_page, @page_count, :remote => false, :url => params.except(:page)).html_safe
 
-= form_tag("", :method => "get", :class => "search") do
-  %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.list.search")}"}
