--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -55,7 +55,7 @@
 
 #list
   = form_tag(list_post_path(params.except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
-    .row.clearfix
+    .row
       .span12
         #filters_box
     .row.clearfix
@@ -87,12 +87,6 @@
 
       %tbody
         - @objects.each do |object|
-          - can_show   = authorized? :show,   @abstract_model, object
-          - can_edit   = authorized? :edit,   @abstract_model, object
-          - can_delete = authorized? :delete, @abstract_model, object
-          - edit_path   = edit_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_edit
-          - show_path   = show_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_show
-          - delete_path = delete_path(:model_name => @abstract_model.to_param, :id => object.id) if can_delete
           %tr
             %td.action.select
               - if can_bulk_action
@@ -105,10 +99,10 @@
             - other_right = list_path(params.merge(:set => (params[:set].to_i + 1)))
             %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
             %td.last
-              = link_to show_label, show_path  if can_show
-              = link_to edit_label, edit_path  if can_edit
-              = link_to delete_label, delete_path  if can_delete
-    - if @page_count.to_i > 1 && !params[:all]
+              = link_to show_label, show_path(  :model_name => @abstract_model.to_param, :id => object.id) if authorized? :show,   @abstract_model, object
+              = link_to edit_label, edit_path(:model_name => params[:model_name], :id => object.id) if authorized? :edit,   @abstract_model, object
+              = link_to delete_label, delete_path(:model_name => @abstract_model.to_param, :id => object.id) if authorized? :delete, @abstract_model, object
+    - if @page_count.to_i > 1
       .pagination
         %ul
           - if @record_count.to_i <= 100 && @page_count.to_i > 1
