--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -31,6 +31,7 @@
             %ul.tabs= render :partial => 'layouts/rails_admin/pills'
           - else
             %ul.tabs= render :partial => 'layouts/rails_admin/tabs'
+        %span.row
         = yield
         %footer
           %p © RailsAdmin 2011
