--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -1,13 +1,12 @@
 - file = @object.send(field.method_name)
 
 .toggle{:style => ('display:none;' if file.file? && field.delete_method && @object.send(field.delete_method) == '1')}
-  = field.pretty_value
+  %span.clearfix= field.pretty_value
   = form.file_field(field.method_name, field.html_attributes)
 - if field.optional? && field.errors.blank? && file.file? && field.delete_method
-  .delete
-    = form.check_box(field.delete_method)
-    = form.label(field.delete_method, I18n.t('admin.actions.delete').capitalize + " [#{file.instance.send(file.name.to_s + '_file_name') rescue field.method_name}]")
-
+  %span.label.notice{:style => 'cursor:pointer;', :onclick => "$j(this).siblings('[type=checkbox]').click(); $j(this).siblings('.toggle').toggle('slow'); $j(this).toggleClass('important notice'); "}
+    = I18n.t('admin.actions.delete').capitalize + " #{field.method_name}"
+  = form.check_box(field.delete_method, :style => 'display:none;' )
 - head_javascript do
   :plain
     $j(".field .input .delete input[type='checkbox']").bind('click', function() {
