--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -9,7 +9,7 @@
     .span3
       %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.list.search")}"}
     .span3
-      %button.btn.primary.search_submit{:type => "submit", :value => ""}Refresh
+      %button.btn.primary{:type => "submit", :value => ""}Refresh
 %table#history.zebra-striped
   %thead
     %tr
