--- a/app/views/rails_admin/main/_form_datetime.html.haml
+++ b/app/views/rails_admin/main/_form_datetime.html.haml
@@ -1,7 +1,7 @@
 = form.send field.view_helper, field.method_name, field.html_attributes
 
-- head_javascript do
+= javascript_tag do
   :plain
-    $j(document).ready(function($){
+    jQuery(function($) {
       $("##{field.dom_id}").datetimepicker(#{field.js_plugin_options.html_safe});
     });
