--- a/app/views/rails_admin/main/_form_enumeration.html.haml
+++ b/app/views/rails_admin/main/_form_enumeration.html.haml
@@ -1,5 +1,5 @@
 = form.select field.method_name, field.enum, {:include_blank => true}, field.html_attributes.merge({ :class => "enum" })
-- head_javascript do
-  $j(document).ready(function($){
+= javascript_tag do
+  jQuery(function($) {
   $("##{"#{field.dom_id}"}").filteringSelect({});
   })
