--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -25,8 +25,8 @@
   - path_hash = { :model_name => config.abstract_model.to_param }
   - path_hash.merge!({ :associations => { field.inverse_of => (@object.id || 'new') } }) if field.inverse_of
   = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, new_path(path_hash), :class => "createAssociatedRecord", :style => 'margin-left:10px'
-- head_javascript do
-  $j(document).ready(function($){
+= javascript_tag do
+  jQuery(function($) {
   $("##{field.dom_id}").filteringSelect({
   - if xhr
     createQuery: function(query) {
