--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -1,14 +1,17 @@
 - file = @object.send(field.method_name)
 
 .toggle{:style => ('display:none;' if file.file? && field.delete_method && @object.send(field.delete_method) == '1')}
-  %span.clearfix= field.pretty_value
+  = field.pretty_value
+  %span.row
   = form.file_field(field.method_name, field.html_attributes)
 - if field.optional? && field.errors.blank? && file.file? && field.delete_method
   %span.label.notice{:style => 'cursor:pointer;', :onclick => "$j(this).siblings('[type=checkbox]').click(); $j(this).siblings('.toggle').toggle('slow'); $j(this).toggleClass('important notice'); "}
     = I18n.t('admin.actions.delete').capitalize + " #{field.method_name}"
   = form.check_box(field.delete_method, :style => 'display:none;' )
-- head_javascript do
+= javascript_tag do
   :plain
-    $j(".field .input .delete input[type='checkbox']").bind('click', function() {
-      $j(this).parents('.input').first().children('.toggle').toggle('slow');
-    });
+    jQuery(function($) {
+      $(".field .input .delete input[type='checkbox']").bind('click', function() {
+        $(this).parents('.input').first().children('.toggle').toggle('slow');
+      });
+    })
