--- a/app/views/layouts/rails_admin/_models_tabs.html.haml
+++ b/app/views/layouts/rails_admin/_models_tabs.html.haml
@@ -15,8 +15,8 @@
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle Selected...
       %ul.dropdown-menu
-        %li= link_to_function t("admin.list.export_selected"), "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;" if can_export
-        %li= link_to_function t("admin.list.delete_selected"), "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;" if can_delete
+        %li= link_to_function t("admin.list.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit(); return false;" if can_export
+        %li= link_to_function t("admin.list.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit(); return false;" if can_delete
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle= t('admin.list.add_filter') + "..."
