--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -5,7 +5,7 @@
   %span.row
   = form.file_field(field.method_name, field.html_attributes)
 - if field.optional? && field.errors.blank? && file.file? && field.delete_method
-  %span.label.notice{:style => 'cursor:pointer;', :onclick => "$j(this).siblings('[type=checkbox]').click(); $j(this).siblings('.toggle').toggle('slow'); $j(this).toggleClass('important notice'); "}
+  %span.label.notice{:style => 'cursor:pointer;', :onclick => "jQuery(this).siblings('[type=checkbox]').click(); jQuery(this).siblings('.toggle').toggle('slow'); jQuery(this).toggleClass('important notice'); "}
     = I18n.t('admin.actions.delete').capitalize + " #{field.method_name}"
   = form.check_box(field.delete_method, :style => 'display:none;' )
 = javascript_tag do
