--- a/app/assets/stylesheets/rails_admin/ra.theme.css.less
+++ b/app/assets/stylesheets/rails_admin/ra.theme.css.less
@@ -28,3 +28,11 @@ input, textarea {
 .input-append { 
   display:inline-block;
 }
+
+/* Table cell behaviour */
+table td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width:100px;
+}
